--- a/sample-checked.html
+++ b/sample-checked.html
@@ -74,5 +74,25 @@ function resolveRadio() {
 
 </script>
 
+<script>
+  var correct = 0, wrong = 0;
+  function processPhrase() {
+
+      secretphrase = document.getElementById("secretphrase").value
+      checkphrase = document.getElementById("checkphrase").value
+      if (secretphrase == checkphrase) {
+          correct = correct + 1;
+          document.getElementById("result").innerHTML = "Correct count " + correct;
+          alert("access allowed");
+      } else {
+
+          wrong = wrong + 1;
+          document.getElementById("result").innerHTML = "Wrong count " + wrong;
+          alert("access denied");
+      }
+  }
+</script>
+
+
 </body>
 </html> 
